[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "bt_api_upbit"
version = "0.1.1"
description = "Upbit exchange plugin for bt_api framework - Korean cryptocurrency exchange"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "cloudQuant", email = "yunjinqi@gmail.com" }
]
keywords = [
    "bt_api",
    "upbit",
    "cryptocurrency",
    "exchange",
    "trading",
    "algorithmic-trading",
    "crypto",
    "korea"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "bt_api_base>=0.15",
    "PyJWT",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/cloudQuant/bt_api_upbit"
Repository = "https://github.com/cloudQuant/bt_api_upbit"
Documentation = "https://bt-api-upbit.readthedocs.io/"
Issues = "https://github.com/cloudQuant/bt_api_upbit/issues"
Changelog = "https://github.com/cloudQuant/bt_api_upbit/blob/master/CHANGELOG.md"

[tool.hatch.build.targets.sdist]
include = ["src/"]

[tool.hatch.build.targets.wheel]
packages = ["src/bt_api_upbit"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "C4",
    "T20",
    "YTT",
    "ASYNC",
    "BLE",
    "COM",
    "DTZ",
    "EM",
    "ISC",
    "ICN",
    "G",
    "PIE",
    "T10",
    "DJ",
    "S",
    "N",
    "RUF100",
    "PERF",
    "PIE790",
]
ignore = [
    "E501",
    "B008",
    "N802",
    "N803",
    "S101",
    "G004",
    "G201",
    "DTZ007",
]

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
